--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<div class="content">
 					<header>
 						<h2>Meu Trabalho</h2>
-						<p>Estes são alguns dos projetos que desenvolvi ao longo de meus estudos como cientista de dados, 
+						<p>Estes são os principais projetos que desenvolvi ao longo de meus estudos como cientista de dados, 
 						utilizando a linguagem Python, os quais envolvem análises exploratórias dados através do uso de recursos 
 						estatísticos e gráficos, com problemas que envolvem classificação, regressão e deep learning para 
 						modelagem de previsão em machine learning. Todos os projetos podem ser encontrados em meu
