--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						utilizando a linguagem Python, os quais envolvem análises exploratórias dados através do uso de recursos 
 						estatísticos e gráficos, com problemas que envolvem classificação, regressão e deep learning para 
 						modelagem de previsão em machine learning. Todos os projetos podem ser encontrados em meu
-						<a href="https://github.com/MattGenaro">GitHub</a>
+						<a href="https://github.com/MattGenaro">GitHub</a>.
 						</p>
 					</header>
 
