--- a/index.html
+++ b/index.html
@@ -79,11 +79,14 @@
 				<div class="content">
 					<header>
 						<h2>Meu Trabalho</h2>
-						<p>Estes são os principais projetos que desenvolvi ao longo de meus estudos como cientista de dados, 
+						<p>Abaixo, estão meus principais projetos que desenvolvi ao longo do meu curso como cientista de dados, 
 						utilizando a linguagem Python, os quais envolvem análises exploratórias dados através do uso de recursos 
 						estatísticos e gráficos, com problemas que envolvem classificação, regressão e deep learning para 
-						modelagem de previsão em machine learning. Todos os projetos podem ser encontrados em meu
-						<a href="https://github.com/MattGenaro">GitHub</a>.
+						modelagem de previsão em machine learning. 
+						</p>
+						<p>Todos os projetos podem ser encontrados em meu
+						<a href="https://github.com/MattGenaro">GitHub</a>. Além disso, você também pode conferir meus projetos
+						de análise de dados realizados em <a href="https://public.tableau.com/profile/mateus.genaro#!/">Tableau</a>.
 						</p>
 					</header>
 
