--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@
 						estatísticos e gráficos, com problemas que envolvem classificação, regressão e deep learning para 
 						modelagem de previsão em machine learning. 
 						</p>
-						<p>Todos os projetos podem ser encontrados em meu
+						<p>Todos os projetos abaixo podem ser encontrados em meu
 						<a href="https://github.com/MattGenaro">GitHub</a>. Além disso, você também pode conferir meus projetos
 						de análise de dados realizados em <a href="https://public.tableau.com/profile/mateus.genaro#!/">Tableau</a>.
+						Caso tenha interesse, você pode conferir as informações completas sobre minhas experiências, perfil e formações
+						em meu <a href="https://drive.google.com/file/d/1LfW84RdrWVuBoGsetbn3g0Vm1RAq4d6E/view">currículo</a>.
 						</p>
 					</header>
 
@@ -120,6 +122,7 @@
 				<div class="content">
 					<header>
 						<h2>Entre em Contato</h2>
+						<p><strong>E-mail:</strong> genaro.mateus@gmail.com, ou, deixe uma mensagem abaixo.</p>
 					</header>
 					<div class="box">
 						<form method="post" action="#">
