--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						<a href="https://github.com/MattGenaro">GitHub</a>. Além disso, você também pode conferir meus projetos
 						de análise de dados realizados em <a href="https://public.tableau.com/profile/mateus.genaro#!/">Tableau</a>.
 						Caso tenha interesse, você pode conferir as informações completas sobre minhas experiências, perfil e formações
-						em meu <a href="https://drive.google.com/file/d/1mAWz9fXtmoELdSe3vQf1kjBhrQtv2JMV/view">currículo</a>.
+						em meu <a href="https://drive.google.com/file/d/1jdFOU0uyrzjcrySiwLq_bNyTDwWPzOtY/view?usp=sharing">currículo</a>.
 						</p>
 					</header>
 
