--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE HTML>
+<!--
+	Massively by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
 		<title>Portfolio Genaro</title>
@@ -9,158 +14,210 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Header -->
-			<header id="header">
-				<h1>Portfolio Genaro</h1>
-				<nav>
-					<ul>
-						<li><a href="#intro">Intro</a></li>
-						<li><a href="#one">O Que Faço</a></li>
-						<li><a href="#two">Quem Sou</a></li>
-						<li><a href="#work">Meu Trabalho</a></li>
-						<li><a href="#contact">Contato</a></li>
-					</ul>
-				</nav>
-			</header>
+		<!-- Wrapper -->
+			<div id="wrapper" class="fade-in">
 
-		<!-- Intro -->
-			<section id="intro" class="main style1 dark fullscreen">
-				<div class="content">
-					<header>
-						<h2>Olá!</h2>
-					</header>
-					<p>Meu nome é Mateus Genaro, <strong>Cientista de Dados</strong> e <a href="http://lattes.cnpq.br/8890403902880601">mestre em Física</a>,<br />
-					apaixonado por conhecimento, estatística e café. Neste portfolio encontrará um pouco sobre o que faço, quem sou, e meus trabalhos.</p>
-					<footer>
-						<a href="#one" class="button style2 down">More</a>
-					</footer>
-				</div>
-			</section>
-
-		<!-- One -->
-			<section id="one" class="main style2 right dark fullscreen">
-				<div class="content box style2">
-					<header>
-						<h2>O Que Faço</h2>
-					</header>
-					<p>Experiência em atividades que envolvam o estudo e aplicação de conhecimentos nas áreas de
-					física e matemática, sendo capaz de entender, desenvolver e criar soluções para possíveis
-					problemas e situações que requeiram explicações e/ou descrições, através do método científico.
-					Tais experiências englobam atividades como: comunicação e planejamento com as pessoas envolvidas
-					na situação; modelagem de problemas; coleta, estruturação e limpeza de dados; utilização de métodos
-					estatísticos e matemáticos; desenvolvimento de uma análise descritiva, exploratória, inferencial,
-					preditiva e/ou causal; determinação dos parâmetros relevantes envolvendo as variáveis de interesse;
-					encontrar a melhor tomada de decisão para a solução do problema; storytelling dos processos.</p>
-				</div>
-				<a href="#two" class="button style2 down anchored">Next</a>
-			</section>
-
-		<!-- Two -->
-			<section id="two" class="main style2 left dark fullscreen">
-				<div class="content box style2">
-					<header>
-						<h2>Quem Sou</h2>
-					</header>
-					<p>Graduado bacharel em Física em 2016 e mestrado em Física em 2019, estudo ciência de dados desde
-					Outubro de 2019 e, desde então, realizei diversos cursos e desenvolvi vários projetos na mesma área.
-					Boa relação interpessoal e intrapessoal são algumas das características das habilidades sociais de
-					minha pessoa, as quais se desenvolveram ao longo dos anos ao se trabalhar em equipe, em grupos de pesquisa,
-					e com a prática de lecionar aulas. Perfil analítico, lógico e racional, sou capaz de observar e aprender
-					sobre um qualquer ambiente para me adaptar no mesmo, afim de alcançar o melhor desempenho no que for 
-					necessário. Sempre buscando conhecimento, acredito que esta é a melhor maneira para estar em constante
-					evolução profissional e pessoal.
-					</p>
-				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
-			</section>
-
-		<!-- Work -->
-			<section id="work" class="main style3 primary">
-				<div class="content">
-					<header>
-						<h2>Meu Trabalho</h2>
-						<p>Abaixo, estão meus principais projetos que desenvolvi ao longo do meu curso como cientista de dados, 
-						utilizando a linguagem Python, os quais envolvem análises exploratórias dados através do uso de recursos 
-						estatísticos e gráficos, com problemas que envolvem classificação, regressão e deep learning para 
-						modelagem de previsão em machine learning. 
-						</p>
-						<p>Todos os projetos abaixo podem ser encontrados em meu
-						<a href="https://github.com/MattGenaro">GitHub</a>. Além disso, você também pode conferir meus projetos
-						de análise de dados realizados em <a href="https://public.tableau.com/profile/mateus.genaro#!/">Tableau</a>.
-						Caso tenha interesse, você pode conferir as informações completas sobre minhas experiências, perfil e formações
-						em meu <a href="https://drive.google.com/file/d/1mpiFr6qH74Gbu4lAUp4pbwHIRnYigsIx/view?usp=sharing">currículo</a>.
-						</p>
-					</header>
-
-					<!-- Gallery  -->
-						<div class="gallery">
-							<article class="from-left">
-								<a href="images/titanic.jpg" class="image fit"><img src="images/titanic.jpg" title="In Depth Analysis on Titanic Incident" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/twitter.jpg" class="image fit"><img src="images/twitter.jpg" title="Natural Language Process with Real Disaster Tweets" alt="" /></a>
-							</article>
-							<article class="from-left">
-								<a href="images/sales.jpg" class="image fit"><img src="images/sales.jpg" title="Predicting Future Sales" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/digit.jpg" class="image fit"><img src="images/digit.jpg" title="Digit Recognition" alt="" /></a>
-							</article>
-							<article class="from-left">
-								<a href="images/google.jpg" class="image fit"><img src="images/google.jpg" title="Google Play Store Sentiment Analysis" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/aurora.jpg" class="image fit"><img src="images/aurora.jpg" title="NASA Space Apps Challenge: Aurora Project" alt="" /></a>
-							</article>
-						</div>
-
-				</div>
-			</section>
-
-		<!-- Contact -->
-			<section id="contact" class="main style3 secondary">
-				<div class="content">
-					<header>
-						<h2>Entre em Contato</h2>
-						<p><strong>E-mail:</strong> genaro.mateus@gmail.com, ou, deixe uma mensagem abaixo.</p>
-					</header>
-					<div class="box">
-						<form method="post" action="#">
-							<div class="fields">
-								<div class="field half"><input type="text" name="name" placeholder="Nome" /></div>
-								<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
-								<div class="field"><textarea name="message" placeholder="Mensagem" rows="6"></textarea></div>
-							</div>
-							<ul class="actions special">
-								<li><input type="submit" value="Enviar Mensagem" /></li>
-							</ul>
-						</form>
+				<!-- Intro -->
+					<div id="intro">
+						<h1>Olá!</h1>
+						<p>Meu nome é Mateus Genaro, <strong>Cientista de Dados</strong> e <a href="http://lattes.cnpq.br/8890403902880601">mestre em Física</a>,<br />
+							apaixonado por conhecimento, estatística e café. Neste portfolio encontrará um pouco sobre o que faço, quem sou, e meus trabalhos.</p>
+						<ul class="actions">
+							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+						</ul>
 					</div>
-				</div>
-			</section>
 
-		<!-- Footer -->
-			<footer id="footer">
+				<!-- Header -->
+					<header id="header">
+						<a href="index.html" class="logo">INÍCIO</a>
+					</header>
 
-				<!-- Icons -->
-					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/mateus-genaro-5bb355134/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/MattGenaro" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="https://www.instagram.com/genaro.mateus/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					</ul>
+				<!-- Nav -->
+					<nav id="nav">
+						<ul class="links">
+							<li class="active"><a href="index.html">Portfolio</a></li>
+							<li><a href="generic.html">Sobre mim</a></li>
+						</ul>
+						<ul class="icons">
+                            <li><a href="https://github.com/MattGenaro" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                            <li><a href="https://www.instagram.com/genaro.mateus/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.facebook.com/mat.genaro" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						</ul>
+					</nav>
 
-				<!-- Menu -->
-					<ul class="menu">
-						<li>Currículo <a href="http://lattes.cnpq.br/8890403902880601">Lattes</a></li>
-					</ul>
+				<!-- Main -->
+					<div id="main">
 
-			</footer>
+						<!-- Featured Post -->
+							<article class="post featured">
+								<header class="major">
+									<span class="date">25 de Janeiro de 2021</span>
+									<h2><a>Meu Trabalho<br />
+									</a></h2>
+									<p>Abaixo, estão meus principais projetos que desenvolvi ao longo do meu curso como engenheiro e cientista de dados, 
+										utilizando a linguagem Python, os quais envolvem análises exploratórias dados através do uso de recursos 
+										estatísticos e gráficos, com problemas que envolvem classificação, regressão, clustering e deep learning 
+										para modelagem de análise preditiva com machine learning. 
+										</p>
+										<p>Todos os projetos abaixo podem ser encontrados em meu
+										<a href="https://github.com/MattGenaro">GitHub</a>. Além disso, você também pode conferir meus projetos
+										de análise de dados realizados em <a href="https://drive.google.com/file/d/12Q5Gad1ImHjV9YSYwkVFzsOyIlDtX-gM/view?usp=sharing">Power BI</a> e 
+										<a href="https://public.tableau.com/profile/mateus.genaro#!/">Tableau</a>.
+										Caso tenha interesse, você pode conferir as informações completas sobre minhas experiências, perfil e formações
+										em meu <a href="https://drive.google.com/file/d/1PLdRJjCTMXlL6JYSxzUpGDV-cvmn6-z3/view?usp=sharing">currículo</a>.
+										</p>
+								</header>
+								<a href="#" class="image main"><img src="images/data.jpg" alt="" /></a>
+								<ul class="actions special">
+									<li><a href="https://github.com/MattGenaro" class="button large">Portfolio GitHub</a></li>
+								</ul>
+							</article>
+
+						<!-- Posts -->
+							<section class="posts">
+								<article>
+									<header>
+										<span class="date">1 de Outubro de 2020</span>
+										<h2><a href="https://github.com/MattGenaro/Predict_Future_Sales">Previsões de<br />
+										Vendas Mensais</a></h2>
+									</header>
+									<a href="https://github.com/MattGenaro/Predict_Future_Sales" class="image fit"><img src="images/sales.jpg" alt="" /></a>
+									<p>Análise exploratória e preditiva de vendas mensais utilizando metamodelagem via modelo ensemble
+										 com banco de dados com sazonalidade e tendência.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/MattGenaro/Predict_Future_Sales" class="button">Rep GitHub</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">15 de Novembro de 2020</span>
+										<h2>Arquitetura de Dados<br />
+											e Microsserviços</h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/int.jpg" alt="" /></a>
+									<p>Elaborar uma arquitetura de dados para geração de uma base de dados para mailing, desde coletando dados de CEPs,
+                                         passando por microserviços, transformando os dados, e carregando eles para uma data warehouse, 
+                                         até fazer e entrega dos dados para o cliente.</p>
+								</article>
+								<article>
+									<header>
+										<span class="date">8 de Setembro de 2020</span>
+										<h2><a href="#">NLP com<br />
+										Tweets de Desastre</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/twitter.jpg" alt="" /></a>
+									<p>Análise exploratória e preditiva utilizando Natural Language Process em um banco de dados de 'tweets' da plataforma Twitter.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/MattGenaro/NLP_with_Disaster_Tweets" class="button">Rep GitHub</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">7 de Janeiro de 2020</span>
+										<h2><a href="#">Integração<br />
+										SQL e Front-End</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/rpa.jpg" alt="" /></a>
+									<p>Mineração de dados abertos de CNPJs, providos pela Receita Federal, construção de uma base de dados em SQL, e integração
+										 com um sistema de banking e delivery, a fim realizar a consulta dos mesmos CNPJs de empresas com delivery.</p>
+								</article>
+								<article>
+									<header>
+										<span class="date">8 de Setembro de 2020</span>
+										<h2><a href="#">Reconhecedor<br />
+										de Dígitos</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/digit.jpg" alt="" /></a>
+									<p>Modelando um reconhecedor de dígitos com aprendizado profundo. </p>
+									<ul class="actions special">
+										<li><a href="https://github.com/MattGenaro/Digit_Recognizer" class="button">Rep GitHub</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">April 7, 2017</span>
+										<h2><a href="#">Análises de<br />
+										Expressões Faciais</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/powerbi.jpg" alt="" /></a>
+									<p>Utilizar dados gerados a partir de resultados de machine learning para detecção de expressões faciais, 
+										e fazer o carregamento destes para uma base de dados NoSQL. Com isso, realizar um processo ETL
+										para uma base de dados SQL, para que, por fim, seja feito analytics em BI.</p>
+									<ul class="actions special">
+										<li><a href="https://drive.google.com/file/d/12Q5Gad1ImHjV9YSYwkVFzsOyIlDtX-gM/view?usp=sharing" class="button">PDF</a></li>
+									</ul>
+								</article>
+							</section>
+
+						<!-- Footer -->
+							<footer>
+								<div class="pagination">
+									<!--<a href="#" class="previous">Prev</a>-->
+									<a href="index.html" class="page active">1</a>
+									<a href="page2.html" class="page">2</a>
+								</div>
+							</footer>
+
+					</div>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<section>
+							<form method="post" action="#">
+								<div class="fields">
+									<div class="field">
+										<label for="name">Nome</label>
+										<input type="text" name="name" id="name" />
+									</div>
+									<div class="field">
+										<label for="email">Email</label>
+										<input type="text" name="email" id="email" />
+									</div>
+									<div class="field">
+										<label for="message">Mensagem</label>
+										<textarea name="message" id="message" rows="3"></textarea>
+									</div>
+								</div>
+								<ul class="actions">
+									<li><input type="submit" value="Enviar Menssagem" /></li>
+								</ul>
+							</form>
+						</section>
+						<section class="split contact">
+							<section class="alt">
+								<h3>LinkedIn</h3>
+								<p><a href="https://www.linkedin.com/in/genaro-mateus/">https://www.linkedin.com/in/genaro-mateus/</a></p>
+							</section>
+							<section>
+								<h3>Telefone</h3>
+								<p><a href="#">(41) 99890-2678</a></p>
+							</section>
+							<section>
+								<h3>Email</h3>
+								<p><a href="#">genaro.mateus@gmail.com</a></p>
+							</section>
+							<section>
+								<h3>Social</h3>
+								<ul class="icons alt">
+									<li><a href="https://github.com/MattGenaro" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.instagram.com/genaro.mateus/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://www.facebook.com/mat.genaro" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								</ul>
+							</section>
+						</section>
+					</footer>
+
+				<!-- Copyright -->
+					<div id="copyright">
+						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+					</div>
+
+			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
