--- a/generic.html
+++ b/generic.html
@@ -29,9 +29,9 @@
 							<li class="active"><a href="generic.html">Sobre mim</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                            <li><a href="https://github.com/MattGenaro" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                            <li><a href="https://www.instagram.com/genaro.mateus/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.facebook.com/mat.genaro" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						</ul>
 					</nav>
 
