--- a/page2.html
+++ b/page2.html
@@ -36,7 +36,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Portfolio</a></li>
-							<li><a href="generic.html">Sobre mim</a></li>
+							<li><a href="sobremim.html">Sobre mim</a></li>
 						</ul>
 						<ul class="icons">
                             <li><a href="https://github.com/MattGenaro" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
