--- a/sobremim.html
+++ b/sobremim.html
@@ -26,7 +26,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Portfolio</a></li>
-							<li class="active"><a href="generic.html">Sobre mim</a></li>
+							<li class="active"><a href="sobremim.html">Sobre mim</a></li>
 						</ul>
 						<ul class="icons">
                             <li><a href="https://github.com/MattGenaro" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
