--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 										de Dígitos</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/digit.jpg" alt="" /></a>
-									<p>Modelando um reconhecedor de dígitos com aprendizado profundo. </p>
+									<p>Modelagem de um reconhecedor de dígitos com deep learning.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/MattGenaro/Digit_Recognizer" class="button">Rep GitHub</a></li>
 									</ul>
