--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									</header>
 									<a href="https://github.com/MattGenaro/Predict_Future_Sales" class="image fit"><img src="images/sales.jpg" alt="" /></a>
 									<p>Análise exploratória e preditiva de vendas mensais utilizando metamodelagem via modelo ensemble
-										 com banco de dados com sazonalidade e tendência.</p>
+										 com machine learning, em um banco de dados com sazonalidade e tendência.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/MattGenaro/Predict_Future_Sales" class="button">Rep GitHub</a></li>
 									</ul>
@@ -95,18 +95,19 @@
 											e Microsserviços</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/int.jpg" alt="" /></a>
-									<p>Elaborar uma arquitetura de dados para geração de uma base de dados para mailing, desde coletando dados de CEPs,
-                                         passando por microserviços, transformando os dados, e carregando eles para uma data warehouse, 
+									<p>Elaboração de arquitetura de dados para geração de uma base de dados para mailing, desde coleta dados de CEPs,
+                                         passando por microserviços, transformação dos dados e carregamento dos mesmos para uma data warehouse, 
                                          até fazer e entrega dos dados para o cliente.</p>
 								</article>
 								<article>
 									<header>
 										<span class="date">8 de Setembro de 2020</span>
-										<h2><a href="#">NLP com<br />
+										<h2><a href="https://github.com/MattGenaro/NLP_with_Disaster_Tweets">NLP com<br />
 										Tweets de Desastre</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/twitter.jpg" alt="" /></a>
-									<p>Análise exploratória e preditiva utilizando Natural Language Process em um banco de dados de 'tweets' da plataforma Twitter.</p>
+									<a href="https://github.com/MattGenaro/NLP_with_Disaster_Tweets" class="image fit"><img src="images/twitter.jpg" alt="" /></a>
+									<p>Análise exploratória e preditiva utilizando Natural Language Process em um banco de dados contendo frases, ou melhor,
+										 'tweets', da plataforma Twitter, a fim de fazer a previsão de desastres reais.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/MattGenaro/NLP_with_Disaster_Tweets" class="button">Rep GitHub</a></li>
 									</ul>
@@ -124,10 +125,10 @@
 								<article>
 									<header>
 										<span class="date">8 de Setembro de 2020</span>
-										<h2><a href="#">Reconhecedor<br />
+										<h2><a href="https://github.com/MattGenaro/Digit_Recognizer">Reconhecedor<br />
 										de Dígitos</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/digit.jpg" alt="" /></a>
+									<a href="https://github.com/MattGenaro/Digit_Recognizer" class="image fit"><img src="images/digit.jpg" alt="" /></a>
 									<p>Modelagem de um reconhecedor de dígitos com deep learning.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/MattGenaro/Digit_Recognizer" class="button">Rep GitHub</a></li>
@@ -136,13 +137,13 @@
 								<article>
 									<header>
 										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Análises de<br />
+										<h2><a href="https://drive.google.com/file/d/12Q5Gad1ImHjV9YSYwkVFzsOyIlDtX-gM/view?usp=sharing">Análises de<br />
 										Expressões Faciais</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/powerbi.jpg" alt="" /></a>
-									<p>Utilizar dados gerados a partir de resultados de machine learning para detecção de expressões faciais, 
-										e fazer o carregamento destes para uma base de dados NoSQL. Com isso, realizar um processo ETL
-										para uma base de dados SQL, para que, por fim, seja feito analytics em BI.</p>
+									<a href="https://drive.google.com/file/d/12Q5Gad1ImHjV9YSYwkVFzsOyIlDtX-gM/view?usp=sharing" class="image fit"><img src="images/powerbi.jpg" alt="" /></a>
+									<p>Utilização de dados gerados a partir de machine learning para detecção de expressões faciais, 
+										e carregamento destes para uma base de dados NoSQL. Com isso, realização de um processo ETL
+										para uma base de dados SQL, para que, por fim, seja feito OLAP.</p>
 									<ul class="actions special">
 										<li><a href="https://drive.google.com/file/d/12Q5Gad1ImHjV9YSYwkVFzsOyIlDtX-gM/view?usp=sharing" class="button">PDF</a></li>
 									</ul>
