--- a/page2.html
+++ b/page2.html
@@ -51,7 +51,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">25 de Janeiro de 2021</span>
+									<span class="date">5 de Fevereiro de 2021</span>
 									<h2><a>Meu Trabalho<br />
 									</a></h2>
 									<p>Abaixo, estão meus principais projetos que desenvolvi ao longo do meu curso como engenheiro e cientista de dados, 
