--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">25 de Janeiro de 2021</span>
+									<span class="date">5 de Fevereiro de 2021</span>
 									<h2><a>Meu Trabalho<br />
 									</a></h2>
 									<p>Abaixo, estão meus principais projetos que desenvolvi ao longo do meu curso como engenheiro e cientista de dados, 
@@ -83,7 +83,7 @@
 									</header>
 									<a href="https://github.com/MattGenaro/Predict_Future_Sales" class="image fit"><img src="images/sales.jpg" alt="" /></a>
 									<p>Análise exploratória e preditiva de vendas mensais utilizando metamodelagem via modelo ensemble
-										 com machine learning, em um banco de dados com sazonalidade e tendência.</p>
+										 com machine learning, em um base de dados de informações de vendas da empresa, com sazonalidade e tendência.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/MattGenaro/Predict_Future_Sales" class="button">Rep GitHub</a></li>
 									</ul>
@@ -95,7 +95,7 @@
 											e Microsserviços</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/int.jpg" alt="" /></a>
-									<p>Elaboração de arquitetura de dados para geração de uma base de dados para mailing, desde coleta dados de CEPs,
+									<p>Elaboração de arquitetura de dados para geração de uma base de dados para mailing, desde coleta dados de CEPs, com RPA,
                                          passando por microserviços, transformação dos dados e carregamento dos mesmos para uma data warehouse, 
                                          até fazer e entrega dos dados para o cliente.</p>
 								</article>
@@ -106,8 +106,8 @@
 										Tweets de Desastre</a></h2>
 									</header>
 									<a href="https://github.com/MattGenaro/NLP_with_Disaster_Tweets" class="image fit"><img src="images/twitter.jpg" alt="" /></a>
-									<p>Análise exploratória e preditiva utilizando Natural Language Process em um banco de dados contendo frases, ou melhor,
-										 'tweets', da plataforma Twitter, a fim de fazer a previsão de desastres reais.</p>
+									<p>Análise exploratória e preditiva utilizando Natural Language Process em um banco de dados contendo
+										'tweets', providos pela rede social Twitter, a fim de fazer a previsão de desastres reais.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/MattGenaro/NLP_with_Disaster_Tweets" class="button">Rep GitHub</a></li>
 									</ul>
@@ -119,7 +119,7 @@
 										SQL e Front-End</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/rpa.jpg" alt="" /></a>
-									<p>Mineração de dados abertos de CNPJs, providos pela Receita Federal, construção de uma base de dados em SQL, e integração
+									<p>Mineração de dados abertos de CNPJs, com RPA, providos pela Receita Federal, construção de uma base de dados em SQL, e integração
 										 com um sistema de banking e delivery, a fim realizar a consulta dos mesmos CNPJs de empresas com delivery.</p>
 								</article>
 								<article>
@@ -129,21 +129,22 @@
 										de Dígitos</a></h2>
 									</header>
 									<a href="https://github.com/MattGenaro/Digit_Recognizer" class="image fit"><img src="images/digit.jpg" alt="" /></a>
-									<p>Modelagem de um reconhecedor de dígitos com deep learning.</p>
+									<p>Usando fundamentos da visão computacional, incluindo redes neurais simples, para realizar a modelagem de um reconhecedor 
+										de dígitos com deep learning, utilizando métodos de classificação, como SVM e KNN.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/MattGenaro/Digit_Recognizer" class="button">Rep GitHub</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 7, 2017</span>
+										<span class="date">4 de Dezembro de 2020</span>
 										<h2><a href="https://drive.google.com/file/d/12Q5Gad1ImHjV9YSYwkVFzsOyIlDtX-gM/view?usp=sharing">Análises de<br />
 										Expressões Faciais</a></h2>
 									</header>
 									<a href="https://drive.google.com/file/d/12Q5Gad1ImHjV9YSYwkVFzsOyIlDtX-gM/view?usp=sharing" class="image fit"><img src="images/powerbi.jpg" alt="" /></a>
 									<p>Utilização de dados gerados a partir de machine learning para detecção de expressões faciais, 
 										e carregamento destes para uma base de dados NoSQL. Com isso, realização de um processo ETL
-										para uma base de dados SQL, para que, por fim, seja feito OLAP.</p>
+										para uma base de dados SQL, para que, por fim, seja feito analytics em PowerBI.</p>
 									<ul class="actions special">
 										<li><a href="https://drive.google.com/file/d/12Q5Gad1ImHjV9YSYwkVFzsOyIlDtX-gM/view?usp=sharing" class="button">PDF</a></li>
 									</ul>
